infra/runtime/observability/base/router-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-router
  annotations:
    service.kubernetes.io/topology-mode: Auto
spec:
  selector:
    app.kubernetes.io/component: opentelemetry-collector
    app.kubernetes.io/instance: runtime-obs.otel-router
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
