infra/runtime/observability/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otel-router-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: opentelemetry-collector
      app.kubernetes.io/name: otel-router-collector
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              altinn.studio/runtime: "true"
      ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
